[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
line-reader.workspace = true
nc.workspace = true
defmt.workspace = true
ufmt.workspace = true
heapless.workspace = true
defmt-rtt = "1.2.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick", "defmt"] }
rtic-sync = { version = "1.5.0", features = ["defmt-03"] }
embassy-stm32 = { version = "0.6.0", features = [
  "stm32g474ve",
  "single-bank",
  "defmt",
  "unstable-pac",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
pwm-pca9685 = { version = "1.0.0", features = ["async"] }
embedded-hal-async = "1.0.0"
gcode = { version = "0.7.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
